--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -7,9 +7,12 @@
 // Layouts
 @import "layouts/_l-fixedBottom.scss";
 @import "layouts/_l-fullPage.scss";
+@import "layouts/_l-stats.scss";
+@import "layouts/_l-mainImg.scss";
 
 //Components
 @import "components/card";
 @import "components/contentContainer";
 @import "components/footer";
 @import "components/infoBlock";
+@import "components/rule";
