--- a/src/scss/_config.scss
+++ b/src/scss/_config.scss
@@ -5,6 +5,7 @@ $rule: hsl(215, 32%, 27%);
 $main-heading: hsl(0, 0%, 100%);
 $main-paragraph: hsl(215, 51%, 70%);
 $accent: hsl(178, 100%, 50%);
+$accent-transparent: hsla(178, 100%, 50%, 0.5);
 
 // Responsive
 $mobile-breakpoint: 1150px;
