--- a/src/scss/layouts/_l-avatarContainer.scss
+++ b/src/scss/layouts/_l-avatarContainer.scss
@@ -3,6 +3,7 @@
   vertical-align: middle;
   font-size: 1rem;
   font-weight: $fontWeight-thin;
+  margin-top: 0.5rem;
 }
 
 .l-avatarContainer > p {
