--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -9,8 +9,8 @@
 @import "layouts/_l-fixedBottom.scss";
 @import "layouts/_l-fullPage.scss";
 @import "layouts/_l-stats.scss";
-@import "layouts/_l-mainImg.scss";
 @import "layouts/_l-icon.scss";
+@import "layouts/_l-overlay.scss";
 
 //Components
 @import "components/avatar";
