--- a/src/scss/components/_card.scss
+++ b/src/scss/components/_card.scss
@@ -7,6 +7,7 @@
   overflow: hidden;
   max-width: 300px;
   padding: 25px;
+  box-shadow: 0 0 3rem 0 rgba(0, 0, 0, 0.25);
 
   & a {
     text-decoration: none;
