Refactor style code.

--- a/src/scss/_utilities.scss
+++ b/src/scss/_utilities.scss
@@ -5,3 +5,11 @@
 .u-inline {
   display: inline;
 }
+
+.u-verticalSpace {
+  margin: 1.5rem 0 1rem 0;
+}
+
+.u-bumpRight {
+  margin-left: 0.75rem;
+}
