--- a/src/scss/components/_avatar.scss
+++ b/src/scss/components/_avatar.scss
@@ -1,5 +1,7 @@
+// Circular user picture avatar.
+
 .avatar {
   border-radius: 100%;
   border: 1px solid white;
-  width: 2rem;
+  height: 100%;
 }
