--- a/src/scss/layouts/_l-overlay.scss
+++ b/src/scss/layouts/_l-overlay.scss
@@ -1,3 +1,5 @@
+// Layout for hoverable, semi-transparent overlay.
+
 .l-overlay-container {
   border-radius: $borderRadius-small;
   overflow: hidden;
