--- a/src/scss/layouts/_l-fixedBottom.scss
+++ b/src/scss/layouts/_l-fixedBottom.scss
@@ -7,8 +7,8 @@
   left: 0;
   bottom: 1rem;
 
-  @media (max-width: $mobile-breakpoint) and (max-height: 875px) {
+  @media (max-height: 650px) {
     position: static;
-    margin-bottom: 1rem;
+    margin: 1rem 0;
   }
 }
