--- a/src/scss/layouts/_l-fullPage.scss
+++ b/src/scss/layouts/_l-fullPage.scss
@@ -5,4 +5,9 @@
   min-height: 100vh;
   justify-content: center;
   align-items: center;
+
+  & > * {
+    max-width: 18.75rem;
+    padding: 1.5625rem;
+  }
 }
